[package]
name = "drain-flow"
version = "0.4.0-pre1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
custom_derive = "0.1.7"
derive_more = "0.99.17"
enum_derive = "0.1.7"
float_eq = "0.7.0"
fraction = "0.10.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
joinery = "2.1.0"
parking_lot = { version = "0.12.0", features = [
    "hardware-lock-elision",
    "send_guard",
] }
regex = "1.5"
rksuid = { git = "https://github.com/nharring-adjacent/rksuid" }
spectral = "0.6.0"
string-interner = "0.14.0"
tracing = "0.1.32"


[dev-dependencies]
chrono = "0.4"
criterion = "0.3"
proptest = "1.0.0"
rand = "0.8.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
tracing-test = "0.2.1"
tinytemplate = "1.2.1"

[[bench]]
name = "core_benchmarks"
harness = false


[[bench]]
name = "sink_benchmark"
harness = false
