[package]
name = "drain-flow"
version = "0.5.2"
edition = "2021"

[dependencies]
anyhow = "1.0.63"
chrono = "0.4.22"
custom_derive = "0.1.7"
derive_more = "0.99.17"
enum_derive = "0.1.7"
float_eq = "1.0.0"
fraction = "0.11.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
joinery = "3.0.0"
parking_lot = { version = "0.12.1", features = [
    "hardware-lock-elision",
    "send_guard",
] }
regex = "1.6.0"
rksuid = { git = "https://github.com/nharring-adjacent/rksuid" }
spectral = "0.6.0"
string-interner = "0.14.0"
tracing = "0.1.36"


[dev-dependencies]
chrono = "0.4"
criterion = {version = "0.3", features = ["html_reports"]}
proptest = "1.0.0"
rand = "0.8.5"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tracing-test = "0.2.3"
tinytemplate = "1.2.1"

[[bench]]
name = "core_benchmarks"
harness = false


[[bench]]
name = "sink_benchmark"
harness = false
